# Initializator

./: CMakeCache.txt  CMakeLists.txt  Makefile  NMR_exe  cmake_install.cmake  results_gpu.csv
headers/: NmrRelaxationSolve.h  NmrRelaxationSolveKernels.cuh  include_lib.h
results_NMR/: results_grad_0_0_0.csv  results_grad_199_0_0.csv  results_grad_200_0_0.csv
src/: Makefile  NmrRelaxationSolve.cpp  NmrRelaxationSolveKernels.cu  main.cpp
